# ansi256

./: .gitignore  CMakeLists.txt  Makefile  README.md  tmplfile
src/: greyscale.c  intense.c  main.c  spectrum.c  standard.c
src/color/: color.c  color.h
